// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Auth saga checkUserSession 1`] = `
Object {
  "@@redux-saga/IO": true,
  "combinator": false,
  "payload": Object {
    "action": Object {
      "payload": 0,
      "type": "auth/setStatus",
    },
    "channel": undefined,
  },
  "type": "PUT",
}
`;

exports[`Auth saga logout 1`] = `
Object {
  "@@redux-saga/IO": true,
  "combinator": false,
  "payload": Object {
    "args": Array [],
    "context": null,
    "fn": [Function],
  },
  "type": "CALL",
}
`;
